tests/type-check/good/data-common-field.arr

data Foo:
  | bar(a :: Number)
  | baz(a :: Number)
end

b :: Foo    = bar(5)
c :: Number = b.a
