tests/type-check/bad/obj-update-non-ref.arr

data Foo:
  | foo(a :: Number)
end

a = foo(5)
a!{a : 6}
